# Flastik

./: .gitignore  .travis.yml  README.md  __init__.py  flastic.py  flike.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pytest.yml
base_templates/: base.html  footer.html  hello_world.html  navbar.html  stylesheet.css  test.html
doc_templates/: functions_page.html  home_page.html
flastik/: LICENSE.txt  __init__.py  flastik.py
flastik/base_templates/: base.html  navbar.html  test.html
flastik/doc_templates/: classes_page.html  navbar.html
scripts/: command_line.py  flastik  flastik.py
test/: test_flastic.py  test_flastik.py  test_restructured_text.rst
